--- a/css/nav.css
+++ b/css/nav.css
@@ -1,13 +1,13 @@
-nav {
+nav.navbar {
     border-bottom: 1px solid black;
 }
 
-ul {
+ul.navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
-li {
+li.navbar {
     display: inline;
 }
